--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "proxy": "https://bloglinkbackend-it3i.onrender.com",
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "@tailwindcss/line-clamp": "^0.4.4",
